--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,32 @@
-body{
-
+body {
   margin: 0px;
+  text-align: center;
+  font-family: century-gothic;
 }
 
 h1 {
-  margin-top: 0px;
+  margin-top: 0;
 }
+.pro{
+  text-decoration: underline;
+}
+.top-cloud{
+  right: 300px;
+  top: 50px;
+  position: absolute;
+}
+.top-container {
+  background-color: aqua;
+  padding-top: 100px;
+  position: relative;
+}
+.middle-container {
 
-.top-container{
-
 }
-.middle-container{
-height: 200px;
-width: 200px;
-background-color: blueviolet;
+.bottom-container {
 }
-.bottom-container{
-height: 200px;
-width:200px;
-background-color: blue;
+.bottom-cloud{
+  position: absolute;
+  left: 300px;
+  bottom: 300;
 }
