--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,39 @@
 body {
+  color: #40514E;
   margin: 0px;
   text-align: center;
-  font-family: century-gothic;
+  font-family: 'Cardo', serif;
+  font-size: 1.5rem;
 }
-
 h1 {
-  margin-top: 0;
+  color: #66BFBF;
+  font-size: 5.6rem;
+  font-family: 'Caveat', cursive;
+  line-height: 2;
+  margin: 50px auto 0 auto;
+}
+h2{
+  color: #66BFBF;
+  font-size: 2rem;
+  font-weight: normal;
+  padding-bottom: 10px;
+}
+h3{
+  color: #11999E;
 }
 .pro{
   text-decoration: underline;
 }
+.intro{
+  width: 30%;
+  margin: auto;
+}
+p{
+  line-height: 2;
+}
 .top-cloud{
-  right: 300px;
-  top: 50px;
+  right: 370px;
+  top: 40px;
   position: absolute;
 }
 .top-container {
@@ -22,10 +43,84 @@ h1 {
 }
 .bottom-cloud{
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300;
 }
+a{
+  color: #11999E;
+  text-decoration: none;
+}
+a:hover{
+  color: #EAF6F6;
+}
+.contact-message{
+  width: 40%;
+  margin: 40px auto 40px;
+}
 .me{
+  max-width: 10%;
+  max-height: auto;
+}
+.middle-container{
+  margin: 100px 0;
+}
+hr{
+  color: #c0c9c9;
+  border-bottom: none;
+  border-left: none;
+  border-right: none;
+  border-top: dotted 15px;
+  margin: 100px auto;
+  width: 4%;
+}
+.skill-1{
+  float: left;
+  margin-right: 30px;
   max-width: 25%;
   max-height: auto;
+}
+.skill-row{
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+}
+.skill-2{
+  float: right;
+  margin-left: 30px;
+  max-width: 25%;
+  max-height: auto;
+}
+.bottom-container{
+  background-color: #66BFBF;
+  color: #EAF6F6;
+  margin-top: 30px;
+  padding: 50px 0 20px;
+}
+.copy{
+  font-size: 0.75rem;
+}
+.btn {
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, ##11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: 'Caveat', cursive;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+.btn:hover {
+  background:  #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb,  #2bc4ad);
+  background-image: -moz-linear-gradient(top,  #30e3cb,  #2bc4ad);
+  background-image: -ms-linear-gradient(top,  #30e3cb,  #2bc4ad);
+  background-image: -o-linear-gradient(top,  #30e3cb,  #2bc4ad);
+  background-image: linear-gradient(to bottom,  #30e3cb,  #2bc4ad);
+  text-decoration: none;
 }
